--- a/main.css
+++ b/main.css
@@ -3,10 +3,22 @@
   margin: auto;
   width: 850px;
   height: 150px;
+  position: relative;
 }
 .smaller {
   /*display: inline-block;*/
   float: left;
+  position: absolute;
+  top: 12px;
+  bottom: 20px;
+  left: 20px;
+  position: relative;
+}
+p {
+  position: absolute;
+  margin: auto;
+  top: 30px;
+  bottom: 40px;
 }
 .main{
   width: 700px;
